--- a/Language/operators.pod
+++ b/Language/operators.pod
@@ -326,7 +326,7 @@ compiler to understand you.
 
 =head2 circumfix C«< >»
 
-The quote-words construct. Breaks up the contents on whitespace, and returns
+The X<quote-words|qw; quote-words> construct. Breaks up the contents on whitespace, and returns
 a L<List|/type/List> of the words. If a word
 looks like a number literal or a C<Pair> literal, it is converted to the
 appropriate number.
@@ -335,7 +335,7 @@ appropriate number.
 
 =head2 circumfix C«( )»
 
-The grouping operator.
+The X<grouping operator>.
 
 An empty group C<()> creates an empty L<List>.
 Parens around non-empty expressions simply structure the expression, but
@@ -351,7 +351,7 @@ being interpreted as a named argument.
 
 =head2 circumfix C«{ }»
 
-Block or L<Hash> constructor.
+Block or L<Hash> constructor.X<|block constructor; hash constructor>
 
 If the contents looks like a list of pairs and does not use L<$_> or other
 placeholder parameters, returns an itemized L<Hash>.
@@ -365,7 +365,7 @@ the block is executed and coerced to L<Hash>.
 
 =head2 circumfix C«[ ]»
 
-The L<Array> constructor. Returns an itemized L<Array> which does not flatten
+The X<L<Array> constructor>. Returns an itemized L<Array> which does not flatten
 in list context.
 
 =head1 Method Postfix Precedence
@@ -376,7 +376,7 @@ in list context.
                             :$k, :$v, :$kv, :$p, :$exists, :$delete)
 
 Universal interface for positional access to zero or more elements of a
-@container, a.k.a. "array indexing operator".
+@container, a.k.a. "X<array indexing operator|array indexing operator; array subscript operator>".
 
     my @alphabet = 'a' .. 'z';
     say @alphabet[0];                   #-> a
@@ -398,7 +398,7 @@ operator's behavior, and how to implement support for it in custom types.
                             :$k, :$v, :$kv, :$p, :$exists, :$delete)
 
 Universal interface for associative access to zero or more elements of a
-%container, a.k.a. "hash indexing operator".
+%container, a.k.a. "X<hash indexing operator|hash indexing operator; hash subscript operator>".
 
     my %color = kiwi => "green", banana => "yellow", cherry => "red";
     say %color{"banana"};               #-> yellow
@@ -444,7 +444,7 @@ C<{ }> postcircumfix operator at compile-time.
 
 =head2 postcircumfix C«( )»
 
-The call operator. Treats the invocant as a L<Callable> and invokes it,
+The X<call operator>. Treats the invocant as a L<Callable> and invokes it,
 using the expression between the parens as arguments.
 
 Note that an identifier followed by a pair of parens is always parsed as a
@@ -455,20 +455,20 @@ implement a C<method CALL-ME>.
 
 =head2 postfix C«.»
 
-The operator for calling one method, C<$invocant.method>.
+The operator for calling one method, C<$invocant.method>.X<|method call>
 
 Technically this is not an operator, but syntax special-cased in the compiler.
 
 =head2 postfix C«.=»
 
-A mutating method call. C<$invocant.=method> desugars to
+A X<mutating method call>. C<$invocant.=method> desugars to
 C<$invocant = $invocant.method>, similar to L<C<op=>>.
 
 Technically this is not an operator, but syntax special-cased in the compiler.
 
 =head2 postfix C«.^»
 
-A meta-method call. C<$invocant.^method> calls C<method> on C<$invocant>'s
+A X<meta-method call>. C<$invocant.^method> calls C<method> on C<$invocant>'s
 metaclass. It desugars to C<$invocant.HOW.method($invocant, ...)>. See L<C<HOW>>
 for more information.
 
@@ -476,7 +476,7 @@ Technically this is not an operator, but syntax special-cased in the compiler.
 
 =head2 postfix C«.?»
 
-Potential method calls. C<$invocant.?method> calls method C<method> on
+X<Potential method call>s. C<$invocant.?method> calls method C<method> on
 C<$invocant> if it has a method of such name. Otherwise it returns L<Nil>.
 
 Technically this is not an operator, but syntax special-cased in the compiler.
@@ -498,7 +498,7 @@ Technically this is not an operator, but syntax special-cased in the compiler.
 
 =head2 postfix C<».> / postfix C«>>.»
 
-Hyper method call operator will call a method on all elements of a C<List> out of order and return the list of return values in order.
+X<Hyper method call operator>. Will call a method on all elements of a C<List> out of order and return the list of return values in order.
 
     my @a = <a b c>;
     @a».say;                          # a␤b␤c␤
@@ -549,7 +549,7 @@ Technically this is not an operator, but syntax special-cased in the compiler.
 
 =head2 postfix C«.::»
 
-A class-qualified method call, used to call a method as defined in a parent
+A X<class-qualified method call>, used to call a method as defined in a parent
 class or role, even after it has been redefined in the child class.
 
     class Bar {
@@ -566,7 +566,7 @@ class or role, even after it has been redefined in the child class.
 
     multi sub prefix:<++>($x is rw) is assoc<none>
 
-Increments its argument by one, and returns the incremented value.
+Increments its argument by one, and returns the incremented value.X<|increment operator>
 
     my $x = 3;
     say ++$x;       # 4
@@ -580,7 +580,7 @@ semantics.
 
     multi sub prefix:<-->($x is rw) is assoc<none>
 
-Decrements its argument by one, and returns the decremented value.
+Decrements its argument by one, and returns the decremented value.X<|decrement operator>
 
     my $x = 3;
     say --$x;       # 2
@@ -595,7 +595,7 @@ semantics.
 
     multi sub postfix:<++>($x is rw) is assoc<none>
 
-Increments its argument by one, and returns the unincremented value.
+Increments its argument by one, and returns the unincremented value.X<|increment operator>
 
     my $x = 3;
     say $x++;       # 3
@@ -616,7 +616,7 @@ undefined values, it returns 0:
 
     multi sub postfix:<-->($x is rw) is assoc<none>
 
-Decrements its argument by one, and returns the undecremented value.
+Decrements its argument by one, and returns the undecremented value.X<|decrement operator>
 
     my $x = 3;
     say $x--;       # 3
@@ -639,7 +639,7 @@ undefined values, it returns 0:
 
     multi sub infix:<**>(Any, Any) returns Numeric:D is assoc<right>
 
-The exponentiation operator coerces both arguments to L<Numeric>
+The X<exponentiation operator> coerces both arguments to L<Numeric>
 and calculates the left-hand-side raised to the power of the right-hand side.
 
 If the right-hand side is a non-negative integer and the left-hand side
@@ -652,7 +652,7 @@ is carried out without loss of precision.
 
     multi sub prefix:<?>(Mu) returns Bool:D
 
-Boolean context operator.
+X<Boolean context operator>.
 
 Coerces the argument to L<Bool> by calling the C<Bool> method on it.
 Note that this collapses L<Junction>s.
@@ -661,7 +661,7 @@ Note that this collapses L<Junction>s.
 
     multi sub prefix:<!>(Mu) returns Bool:D
 
-Negated boolean context operator.
+X<Negated boolean context operator>.
 
 Coerces the argument to L<Bool> by calling the C<Bool> method on it,
 and returns the negation of the result.
@@ -671,7 +671,7 @@ Note that this collapses L<Junction>s.
 
     multi sub prefix:<+>(Any) returns Numeric:D
 
-Numeric context operator.
+X<Numeric context operator>.
 
 Coerces the argument to L<Numeric> by calling the C<Numeric> method on it.
 
@@ -679,7 +679,7 @@ Coerces the argument to L<Numeric> by calling the C<Numeric> method on it.
 
     multi sub prefix:<->(Any) returns Numeric:D
 
-Negative numeric context operator.
+X<Negative numeric context operator>.
 
 Coerces the argument to L<Numeric> by calling the C<Numeric> method on it,
 and then negates the result.
@@ -688,7 +688,7 @@ and then negates the result.
 
     multi sub prefix:<->(Any) returns Str:D
 
-String context operator.
+X<String context operator>.
 
 Coerces the argument to L<Str> by calling the C<Str> method on it.
 
@@ -704,7 +704,7 @@ flatten into the outer list.
 
     multi sub prefix:<+^>(Any) returns Int:D
 
-Integer bitwise negation.
+X<Integer bitwise negation operator>.
 
 Coerces the argument to L<Int> and does a bitwise negation on the result,
 assuming L<two's complement|https://en.wikipedia.org/wiki/Two%27s_complement>.
@@ -713,7 +713,7 @@ assuming L<two's complement|https://en.wikipedia.org/wiki/Two%27s_complement>.
 
     multi sub prefix:<?^>(Mu) returns Bool:D
 
-Boolean bitwise negation.
+X<Boolean bitwise negation operator>.
 
 Coerces the argument to L<Bool> and then does a bit flip, which makes it the
 same as C<< prefix:<!> >>.
@@ -722,7 +722,7 @@ same as C<< prefix:<!> >>.
 
     multi sub prefix:<^>(Any) returns Range:D
 
-I<upto> operator.
+I<upto> operator.X<|upto operator>
 
 Coerces the argument to L<Numeric>, and generates a range from 0 up to (but
 excluding) the argument.
@@ -736,12 +736,16 @@ excluding) the argument.
 
     multi sub infix:<*>(Any, Any) returns Numeric:D
 
+X<Multiplication operator>.
+
 Coerces both arguments to L<Numeric> and multiplies them. The result
 is of the wider type. See L<Numeric> for details.
 
 =head2 infix C«/»
 
     multi sub infix:</>(Any, Any) returns Numeric:D
+
+X<Division operator>.
 
 Coerces both argument to L<Numeric> and divides the left through the right
 number. Division of L<Int> values returns L<Rat>, otherwise the "wider type"
@@ -751,13 +755,13 @@ rule described in L<Numeric> holds.
 
     multi sub infix:<div>(Int:D, Int:D) returns Int:D
 
-Integer division. Rounds down.
+X<Integer division operator>. Rounds down.
 
 =head2 infix C«%»
 
     multi sub infix:<%>($x, $y) return Numeric:D
 
-Modulo operator. Coerces to L<Numeric> first.
+X<Modulo operator>. Coerces to L<Numeric> first.
 
 Generally the following identity holds:
 
@@ -767,45 +771,45 @@ Generally the following identity holds:
 
     multi sub infix:<%%>($a, $b) returns Bool:D
 
-Divisibility operator. Returns C<True> if C<$a %  $b == 0>.
+X<Divisibility operator>. Returns C<True> if C<$a %  $b == 0>.
 
 =head2 infix C«mod»
 
     multi sub infix:<mod>(Int:D $a, Int:D $b) returns Int:D
 
-Integer modulo operator. Returns the remainder of an integer modulo operation.
+X<Integer modulo operator>. Returns the remainder of an integer modulo operation.
 
 =head2 infix C«+&»
 
     multi sub infix:<+&>($a, $b) returns Int:D
 
-Numeric bitwise I<AND>. Coerces both arguments to L<Int> and does a bitwise
-I<AND> operation assuming two's complement.
+Numeric bitwise I<AND> operator. Coerces both arguments to L<Int> and does a bitwise
+I<AND> operation assuming two's complement.X<|Numeric bitwise AND operator>
 
 =head2 infix C«+<»
 
     multi sub infix:<< +< >>($a, $b) returns Int:D
 
-Integer bit shift to the left.
+Integer bit shift to the left.X<|integer bit shift operator, left>
 
 =head2 infix C«+>»
 
     multi sub infix:<< +> >>($a, $b) returns Int:D
 
-Integer bit shift to the right.
+Integer bit shift to the right.X<|integer bit shift operator, right>
 
 =head2 infix C«gcd»
 
     multi sub infix:<gcd>($a, $b) returns Int:D
 
-Coerces both arguments to L<Int> and returns the greatest common denominator.
+Coerces both arguments to L<Int> and returns the greatest common denominator.X<|greatest commmon demnominator operator>
 
 =head2 infix C«lcm»
 
     multi sub infix:<lcm>($a, $b) returns Int:D
 
 Coerces both arguments to L<Int> and returns the least common multiple, that is
-the smallest integer that is evenly divisible by both arguments.
+the smallest integer that is evenly divisible by both arguments.X<|least common multiple operator>
 
 =head1 Additive Precedence
 
@@ -813,11 +817,15 @@ the smallest integer that is evenly divisible by both arguments.
 
     multi sub infix:<+>($a, $b) returns Numeric:D
 
+X<Addition operator>.
+
 Coerces both arguments to L<Numeric> and adds them.
 
 =head2 infix C«-»
 
     multi sub infix:<->($a, $b) returns Numeric:D
+
+X<Subtraction operator>.
 
 Coerces both arguments to L<Numeric> and subtracts the second from the
 first.
@@ -826,6 +834,8 @@ first.
 
     multi sub infix:<+|>($a, $b) returns Int:D
 
+X<Integer bitwise OR operator>.
+
 Coerces both arguments to L<Int> and does a bitwise I<OR> (inclusive OR)
 operation.
 
@@ -833,12 +843,16 @@ operation.
 
     multi sub infix:<+^>($a, $b) returns Int:D
 
+X<Integer bitwise XOR operator>.
+
 Coerces both arguments to L<Int> and does a bitwise I<XOR> (exclusive OR)
 operation.
 
 =head2 infix C«?|»
 
     multi sub infix:<?|>($a, $b) returns Bool:D
+
+X<Boolean logical OR operator>.
 
 Coerces both arguments to L<Bool> and does a logical I<OR> (inclusive OR)
 operation.
@@ -851,6 +865,8 @@ operation.
     multi sub infix:<x>(Any, Any)
     multi sub infix:<x>(Str:D, Int:D)
 
+X<String repetition operator>.
+
 Coerces C<$a> to L<Str> and C<$b> to L<Int> and repeats the string C<$b>
 times. Return the empty string if C<< $b <= 0 >>.
 
@@ -860,6 +876,9 @@ times. Return the empty string if C<< $b <= 0 >>.
 =head2 infix C«xx»
 
     multi sub infix:<xx>($a, $b) returns List:D
+
+
+X<List repetition operator>.
 
 Returns a list of C<$a> repeated and evaluated C<$b> times (C<$b> is coerced
 to L<Int>). If C<< $b <= 0 >>, the empty list is returned.
@@ -885,6 +904,8 @@ is returned.
     multi sub infix:<~>(Any,   Any)
     multi sub infix:<~>(Str:D, Str:D)
 
+X<String concatenation operator>.
+
 Coerces both arguments to L<Str> and concatenates them.
 
     say 'ab' ~ 'c';     # abc
@@ -895,6 +916,8 @@ Coerces both arguments to L<Str> and concatenates them.
 
     multi sub infix:<&>($a, $b) returns Junction:D is assoc<list>
 
+X<All junction operator>.
+
 Creates an I<all> L<Junction> from its arguments. See L<Junction> for more
 details.
 
@@ -904,12 +927,16 @@ details.
 
     multi sub infix:<|>($a, $b) returns Junction:D is assoc<list>
 
+X<Any junction operator>.
+
 Creates an I<any> L<Junction> from its arguments. See L<Junction> for more
 details.
 
 =head2 infix C«^»
 
     multi sub infix:<^>($a, $b) returns Junction:D is assoc<list>
+
+X<One junction operator>.
 
 Creates a I<one> L<Junction> from its arguments. See L<Junction> for more
 details.
@@ -981,7 +1008,7 @@ to act like a role, for example enum values.
     multi sub infix:<cmp>(Str:D,     Str:D)
     multi sub infix:<cmp>(Version:D, Version:D)
 
-Generic, "smart" three-way comparator.
+X<Generic, "smart" three-way comparator>.
 
 Compares strings with string semantics, numbers
 with number semantics, L<Pair> objects first by key and then by value etc.
@@ -998,7 +1025,7 @@ if C<$a eqv $b>, then C<$a cmp $b> always returns C<Order::Same>.
     multi sub infix:<leg>(Any,   Any)
     multi sub infix:<leg>(Str:D, Str:D)
 
-String three-way comparator. Short for I<less, equal or greater?>.
+X<String three-way comparator>. Short for I<less, equal or greater?>.
 
 Coerces both arguments to L<Str>, and then does a lexicographic comparison.
 
@@ -1010,7 +1037,7 @@ Coerces both arguments to L<Str>, and then does a lexicographic comparison.
 
     multi sub infix:«<=>»($a, $b) returns Order:D is assoc<none>
 
-Numeric three-way comparator.
+X<Numeric three-way comparator>.X<|spaceship operator>
 
 Coerces both arguments to L<Real>, and then does a numeric comparison.
 
@@ -1018,11 +1045,15 @@ Coerces both arguments to L<Real>, and then does a numeric comparison.
 
     multi sub infix:<..>($a, $b) returns Range:D is assoc<none>
 
+X<Range operator>
+
 Constructs a L<Range> from the arguments.
 
 =head2 infix C«..^»
 
     multi sub infix:<..^>($a, $b) returns Range:D is assoc<none>
+
+X<Right-open range operator>.
 
 Constructs a L<Range> from the arguments, excluding the end point.
 
@@ -1030,12 +1061,15 @@ Constructs a L<Range> from the arguments, excluding the end point.
 
     multi sub infix:<^..>($a, $b) returns Range:D is assoc<none>
 
-Constructs a L<Range> from the arguments, excluding the start point.
+X<Left-open range operator>.
 
+Constructs a L<Range> from the arguments, excluding the start point.
 
 =head2 infix C«^..^»
 
     multi sub infix:<^..^>($a, $b) returns Range:D is assoc<none>
+
+X<Open range operator>
 
 Constructs a L<Range> from the arguments, excluding both start and end point.
 
@@ -1052,12 +1086,16 @@ Constructs a L<Range> from the arguments, excluding both start and end point.
     multi sub infix:<==>(Complex:D, Complex:D)
     multi sub infix:<==>(Numeric:D, Numeric:D)
 
+X<Numeric equality operator>.
+
 Coerces both arguments to L<Numeric> if necessary, and returns C<True>
 if they are equal.
 
 =head2 infix C«!=»
 
     proto sub infix:<!=>(Mu, Mu) returns Bool:D is assoc<chain>
+
+X<Numeric inequality operator>.
 
 Coerces both arguments to L<Numeric> (if necessary), and returns C<True> if they are
 distinct.
@@ -1069,6 +1107,8 @@ distinct.
     multi sub infix:«<»(Num:D, Num:D)
     multi sub infix:«<»(Real:D, Real:D)
 
+X<Numeric less than operator>.
+
 Coerces both arguments to L<Real> (if necessary), and returns C<True> if the first argument
 is smaller than the second.
 
@@ -1078,6 +1118,9 @@ is smaller than the second.
     multi sub infix:«<=»(Int:D, Int:D)
     multi sub infix:«<=»(Num:D, Num:D)
     multi sub infix:«<=»(Real:D, Real:D)
+
+
+X<Numeric less than or equal to operator>.
 
 Coerces both arguments to L<Real> (if necessary), and returns C<True> if the first argument
 is smaller than or equal to the second.
@@ -1090,6 +1133,8 @@ is smaller than or equal to the second.
     multi sub infix:«>»(Num:D, Num:D)
     multi sub infix:«>»(Real:D, Real:D)
 
+X<Numeric greater than operator>.
+
 Coerces both arguments to L<Real> (if necessary), and returns C<True> if the first argument
 is larger than the second.
 
@@ -1100,6 +1145,8 @@ is larger than the second.
     multi sub infix:«>=»(Num:D, Num:D)
     multi sub infix:«>=»(Real:D, Real:D)
 
+X<Numeric less than or equal to operator>.
+
 Coerces both arguments to L<Real> (if necessary), and returns C<True> if
 the first argument is larger than or equal to the second.
 
@@ -1108,6 +1155,8 @@ the first argument is larger than or equal to the second.
     proto sub infix:<eq>(Any, Any) returns Bool:D is assoc<chain>
     multi sub infix:<eq>(Any,   Any)
     multi sub infix:<eq>(Str:D, Str:D)
+
+X<String equality operator>.
 
 Coerces both arguments to L<Str> (if necessary), and returns C<True> if both
 are equal.
@@ -1120,6 +1169,8 @@ Mnemonic: I<equal>
     multi sub infix:<ne>(Mu,    Mu)
     multi sub infix:<ne>(Str:D, Str:D)
 
+X<String inequality operator>.
+
 Coerces both arguments to L<Str> (if necessary), and returns C<False> if both
 are equal.
 
@@ -1130,6 +1181,8 @@ Mnemonic: I<not equal>
     proto sub infix:<gt>(Mu, Mu) returns Bool:D is assoc<chain>
     multi sub infix:<gt>(Mu,    Mu)
     multi sub infix:<gt>(Str:D, Str:D)
+
+X<String greater than operator>.
 
 Coerces both arguments to L<Str> (if necessary), and returns C<True> if
 the first is larger than the second, as determined by lexicographic
@@ -1143,6 +1196,8 @@ Mnemonic: I<greater than>
     multi sub infix:<ge>(Mu,    Mu)
     multi sub infix:<ge>(Str:D, Str:D)
 
+X<String greater than or equal to operator>.
+
 Coerces both arguments to L<Str> (if necessary), and returns C<True> if
 the first is equal to or larger than the second, as determined by lexicographic
 comparison.
@@ -1155,6 +1210,8 @@ Mnemonic: I<greater or equal>
     multi sub infix:<lt>(Mu,    Mu)
     multi sub infix:<lt>(Str:D, Str:D)
 
+X<String less than operator>.
+
 Coerces both arguments to L<Str> (if necessary), and returns C<True> if
 the first is smaller than the second, as determined by lexicographic
 comparison.
@@ -1166,6 +1223,8 @@ Mnemonic: I<less than>
     proto sub infix:<le>(Mu, Mu) returns Bool:D is assoc<chain>
     multi sub infix:<le>(Mu,    Mu)
     multi sub infix:<le>(Str:D, Str:D)
+
+X<String less than or equal to operator>.
 
 Coerces both arguments to L<Str> (if necessary), and returns C<True> if
 the first is equal to or smaller than the second, as determined by lexicographic
@@ -1200,7 +1259,7 @@ Returns C<True> if the first argument is larger than the second.
     proto sub infix:<eqv>(Any, Any) returns Bool:D is assoc<chain>
     proto sub infix:<eqv>(Any, Any)
 
-Equivalence operator. Returns C<True> if the two arguments are structurally
+X<Equivalence operator>. Returns C<True> if the two arguments are structurally
 the same, i.e. from the same type and (recursively) contain the same values.
 
     say [1, 2, 3] eqv [1, 2, 3];        # True
@@ -1231,7 +1290,7 @@ implement an appropriate infix C<eqv> operator:
     proto sub infix:<===>(Any, Any) returns Bool:D is assoc<chain>
     proto sub infix:<===>(Any, Any)
 
-Value identity. Returns C<True> if both arguments are the same object.
+X<Value identity operator>. Returns C<True> if both arguments are the same object.
 
     class A { };
     my $a = A.new;
@@ -1255,7 +1314,7 @@ types must override method C<WHICH>.
     proto sub infix:<=:=>(Mu \a, Mu \b) returns Bool:D is assoc<chain>
     multi sub infix:<=:=>(Mu \a, Mu \b)
 
-Container identity. Returns L<True> if both arguments are bound to the same
+X<Container identity operator>. Returns L<True> if both arguments are bound to the same
 container. If it returns C<True>, it generally means that modifying one will
 also modify the other.
 
@@ -1270,7 +1329,7 @@ also modify the other.
 
 =head2 infix C«~~»
 
-The smart-match operator. Aliases the left-hand side to C<$_>, then evaluates
+The X<smart-match operator>. Aliases the left-hand side to C<$_>, then evaluates
 the right-hand side, and calls C<.ACCEPTS($_)> on it. The semantics are left
 to the type of the right-hand side operand.
 
@@ -1334,7 +1393,7 @@ second, no matter how many more true values there are. (In other words, it has
 
 =head2 infix C«//»
 
-Defined-or operator. Returns the first defined operand, or else the last
+X<Defined-or operator>. Returns the first defined operand, or else the last
 operand. Short-circuits.
 
     say Any // 0 // 42;         # 0
@@ -1355,7 +1414,7 @@ Returns the largest of the arguments, as determined by L<cmp> semantics.
 
 =head2 infix C<?? !!>
 
-Ternary operator, conditional operator.
+X<Ternary operator>, X<conditional operator>.
 
 C<$condition ?? $true !! $false> evaluates and returns the expression from the
 C<$true> branch if C<$condition> is a true value. Otherwise it evaluates and
@@ -1365,7 +1424,7 @@ returns the C<$false> branch.
 
     sub infix:<ff>(Mu $a, Mu $b)
 
-Flipflop operator.
+X<Flipflop operator>.
 
 Compares both arguments to C<$_> (that is, C<$_ ~~ $a> and C<$_ ~~
 $b>). Evaluates to C<False> until the left-hand smartmatch is C<True>, at which
@@ -1532,7 +1591,7 @@ This operator cannot be overloaded, as it is handled specially by the compiler.
 
     sub infix:<=>(Mu $a is rw, Mu $b)
 
-Item assignment.
+X<Item assignment operator>.
 
 Places the value of the right-hand side into the container on the left-hand
 side. Its exact semantics are left to the container type on the left-hand side.
@@ -1545,7 +1604,7 @@ C<=> is parsed as item assignment or list assignment operator).
 
     sub infix:«=>»($key, Mu $value) returns Pair:D
 
-L<Pair> constructor.
+L<Pair> constructor.X<|pair constructor>
 
 Constructs a L<Pair> object with the left-hand side as the key and the
 right-hand side as the value.
@@ -1605,7 +1664,7 @@ other positions it is a syntax error.
 
     sub infix:<Z>(**@lists) returns List:D is assoc<chain>
 
-Zip operator.
+X<Zip operator>.
 
 Interleaves the lists passed to C<Z> like a zipper, stopping as soon as
 the first input list is exhausted:
@@ -1624,7 +1683,7 @@ list:
     sub infix:<X>(**@lists) returns List:D is assoc<chain>
 
 Creates a cross product from all the lists, order so that the rightmost
-elements vary most rapidly
+elements vary most rapidly:X<|cross product operator>
 
     1..3 X <a b c> X 9
     # produces ((1 a 9) (1 b 9) (1 c 9)
@@ -1643,7 +1702,7 @@ list:
     multi sub infix:<...>(**@) is assoc<list>
     multi sub infix:<...^>(**@) is assoc<list>
 
-The sequence operator is a generic operator to produce lazy lists.
+The X<sequence operator> is a generic operator to produce lazy lists.
 
 It can have initial elements and a generator on left-hand side, and an
 endpoint on the right-hand side.
@@ -1708,7 +1767,7 @@ well, so the are also checked against the endpoint:
 
 =head2 infix C«=»
 
-List assignment. Its exact semantics are left to the container type on the
+X<List assignment operator>. Its exact semantics are left to the container type on the
 left-hand side. See L<Array> and L<Hash> for common cases.
 
 The distinction between item assignment and list assignment is determined by
@@ -1716,7 +1775,7 @@ the parser depending on the syntax of the left-hand side.
 
 =head2 infix C«:=»
 
-Binding. Whereas C<$x = $y> puts the value in C<$y> into C<$x>, C<$x :=
+X<Binding operator>. Whereas C<$x = $y> puts the value in C<$y> into C<$x>, C<$x :=
 $y> makes C<$x> and C<$y> the same thing.
 
     =for code :allow<B L>
@@ -1740,7 +1799,7 @@ object.
 
 =head2 infix C«::=»
 
-Read-only binding. See L<C<infix :=>|:=>.
+X<Read-only binding operator>. See L<C<infix :=>|:=>.
 
 =head2 listop C«...»
 
@@ -1754,6 +1813,8 @@ message C<stub code executed>.
 
 =head2 listop C«!!!»
 
+X<Fatal stub operator>.
+
 If it is the only
 statement in a routine or type, it marks that routine or type as a stub
 (which is significant in the context of pre-declaring types and composing
@@ -1763,6 +1824,8 @@ If the C<!!!> statement is executed, it calls L<&die>, with the default
 message C<stub code executed>.
 
 =head2 listop C«???»
+
+X<Admonitory stub operator>.
 
 If it is the only
 statement in a routine or type, it marks that routine or type as a stub
